[package]
name = "hym"
version = "0.1.0"
edition = "2021"

[dependencies]


[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "linked_list_bench"
harness = false


[features]
default = ["box_linked_list"]
box_linked_list = []
rc_linked_list = []
nonull_linked_list = []
